# deserialize_untagged_verbose_error

./: Cargo.toml  README.md
deserialize_untagged_verbose_error_macro/: Cargo.toml  README.md
deserialize_untagged_verbose_error_macro/src/: lib.rs
docs/: links.md  main.md
src/: lib.rs
tests/: generic.rs  simple.rs
