[package]
name = "deserialize_untagged_verbose_error"
version = "0.1.4"
edition = "2024"
description = "A Rust procedural macro for creating verbose errors when deserializing untagged enums with Serde."
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/deserialize_untagged_verbose_error.git"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-value = "0.7"
deserialize_untagged_verbose_error_macro = { version = "0.1.2", path = "deserialize_untagged_verbose_error_macro"}

[dev-dependencies]
indoc = "1.0"
serde_yaml = "0.8"

