[package]
name = "deserialize_untagged_verbose_error_macro"
version = "0.1.3"
edition = "2024"
description = "Procedural macro for crate `deserialize_untagged_verbose_error`."
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/deserialize_untagged_verbose_error.git"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
serde = { version = "1", features = ["derive"] }

[features]
default = []
